[package]
name = "AccessToSql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
odbc = "0.17.0"
log = "0.4.20"
toml = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.31"
uuid = { version = "1.6.1", features = ["v4"] }
regex = { version = "1.10.2", features = [] }
